--- a/user_study/parse_results.ipynb
+++ b/user_study/parse_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,27 @@
     "rr_dict = defaultdict(list)\n",
     "for r in reliable_responses:\n",
     "    rr_dict[r.max_climbed].append(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30096153846153845\n",
+      "0.3192307692307692\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating general human accuracy on benchmarks\n",
+    "from statistics import mean\n",
+    "print(mean([r.perc_generated_correct() for r in all_responses]))\n",
+    "print(mean([r.perc_calibration_correct() for r in all_responses]))"
    ]
   },
   {
@@ -117,7 +138,10 @@
     "# print(f'pearson r for all: r = {r[0]}, p = {r[1]}')\n",
     "\n",
     "# ar = pearsonr(advanced_calibs, advanced_generated)\n",
-    "# print(f'pearson r for advanced: r = {ar[0]}, p = {ar[1]}')\n"
+    "# print(f'pearson r for advanced: r = {ar[0]}, p = {ar[1]}')\n",
+    "\n",
+    "# plot points of varying intensity for overlapping in the plot\n",
+    "# can say that going to +-3 gives statistically significant results\n"
    ]
   },
   {
